@@ -1,0 +1,85 @@
+Date: Wed, 13 May 2009 20:17:09 +0100
+From: Anthony Howe <achowe@snert.com>
+Message-ID: <47D2616E.2080401@snert.com>
+MIME-Version: 1.0
+To: achowe@fsg.com
+Subject: gtube anti-spam test
+Content-Type: multipart/mixed;
+ boundary="----=__PartF0D8505D.0__="
+X-MD5-Encoded: e497940f1bcc4c220e1a140358f42890
+X-MD5-Decoded: e497940f1bcc4c220e1a140358f42890
+
+This is a multi-part message in MIME format.
+
+------=__PartF0D8505D.0__=
+Content-Type: text/plain; charset=UTF-8; format=flowed
+Content-Transfer-Encoding: 7bit
+X-MD5-Encoded: 4c97bb4244b556f2354801dcec392aa4
+X-MD5-Decoded: 4c97bb4244b556f2354801dcec392aa4
+
+Three blank lines.
+
+
+
+There is a space after the -- below.
+-- 
+Anthony C Howe          Skype: SirWumpus                    SnertSoft
++33 6 11 89 73 78         ICQ: 7116561          BarricadeMX & Milters
+http://www.snert.com/                       http://www.snertsoft.com/
+
+------=__PartF0D8505D.0__=
+Content-Type: text/plain;
+ name="gtube.txt"
+Content-Transfer-Encoding: base64
+Content-Disposition: inline;
+ filename="gtube.txt"
+X-MD5-Encoded: df72541f246fb579bf4019769011d943
+X-MD5-Decoded: 6a684e1cdca03e6a436d182dd4069183
+
+WEpTKkM0SkRCUUFETjEuTlNCTjMqMklETkVOKkdUVUJFLVNUQU5EQVJELUFOVEktVUJFLVRFU1Qt
+RU1BSUwqQy4zNFg=
+------=__PartF0D8505D.0__=
+Content-Type: text/plain;
+	name="gtube.txt"
+Content-Transfer-Encoding: quoted-printable
+Content-Disposition: inline;
+ filename="gtube.txt"
+X-MD5-Encoded: ae569740a5fd53f914580efa758c1aef
+X-MD5-Decoded: 6a684e1cdca03e6a436d182dd4069183
+
+=58=4a=53=2a=43=34=4a=44=42=51=41=44=4e=31=2e=4e=
+=53=42=4e=33=2a=32=49=44=4e=45=4e=2a=47=54=55=42=
+=45=2d=53=54=41=4e=44=41=52=44=2d=41=4e=54=49=2d=
+=55=42=45=2d=54=45=53=54=2d=45=4d=41=49=4c=2a=43=
+=2e=33=34=58
+------=__PartF0D8505D.0__=
+Content-Type: text/plain;
+ name="gtube.txt"
+Content-Transfer-Encoding: quoted-printable
+Content-Disposition: inline;
+ filename="gtube.txt"
+X-MD5-Encoded: df6f616f76cccb2196fc432a764de432
+X-MD5-Decoded: 6a684e1cdca03e6a436d182dd4069183
+
+XJS=2AC4JDBQADN1=2ENSBN3=2A2IDNEN=2AGTUBE=2DSTANDARD=
+=2DANTI=2DUBE=2DTEST=2DEMAIL=2AC=2E34X
+------=__PartF0D8505D.0__=
+Content-Type: text/plain; name="test1.txt"
+Content-Transfer-Encoding: quoted-printable
+X-MD5-Encoded: 6adbf4aa55642f43ff0a872bd7da9a8a
+X-MD5-Decoded: 72554813857c1537b149b687cf4e71bc
+
+A line of 60 hyphens:
+----------------------------------------=
+--------------------
+Followed by some text.
+Three blank lines.
+
+
+
+--=20
+Your signature
+Appears here
+
+------=__PartF0D8505D.0__=--
+
